# safe-coupling

./: .gitignore  LICENSE  README-Qemu.md  README.md  SGD-verified.cabal  TODO.md  loc  safe-coupling.cabal  stack.yaml
.circleci/: config.yml
.github/workflows/: haskell-ci.yml  haskell.yml
src/: Bins.hs  BinsTheorem.hs  ExpDist.hs  SGD.hs  SGDr.hs  SGDu.hs  TD.hs  TD0.hs  TD0Theorem.hs  Theorem.hs
src/ApplicativeBins/: Bins.hs  Theorem.hs
src/ApplicativeTD/: TD0.hs
src/Bins/: Bins.hs  Theorem.hs  TheoremDist.hs  TheoremSpec.hs
src/Data/: Derivative.hs  Dist.hs  List.hs
src/Examples/: ExpDist.hs
src/Lemmata/Relational/: Act.hs  Iterate.hs  MapM.hs  Sample.hs  TD0.hs  Update.hs
src/Misc/: ProofCombinators.hs
src/Monad/: Distr.hs  PrM.hs
src/Monad/Distr/: EDist.hs  Laws.hs  Predicates.hs
src/Monad/Distr/Relational/: EDist.hs  Spec.hs  Theorems.hs
src/Monad/Distr/Relational/TCB/: Axiom.hs  EDist.hs  Spec.hs
src/Monad/Implemented/: Distr.hs
src/Monad/PrM/: Laws.hs  Lift.hs  Predicates.hs
src/Monad/PrM/Relational/: Rules.hs  Theorems.hs
src/Monad/PrM/Relational/TCB/: EDist.hs  Spec.hs
src/SGD/: DataPointDist.hs  SGD.hs  Theorem.hs
src/TD/: TD0.hs  Theorem.hs
src/TD/Lemmata/Relational/: Act.hs  Iterate.hs  MapM.hs  Sample.hs  Update.hs
src/Theorem/TD0/: Act.hs  Sample.hs  TD0.hs  Update.hs
test/Spec/: Bins.hs  SGD.hs  TD0.hs  Utils.hs
