name:                SGD-verified
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

library
  exposed-modules:     
       Data.Dist
     , Data.List
     , Monad.Distr
     , Misc.ProofCombinators
     , Monad.Implemented.Distr
     , Lemmata.Relational.Update
     , Lemmata.Relational.Sample
     , Lemmata.Relational.Act
     , Lemmata.Relational.MapM
     , Lemmata.Relational.Iterate
     , Lemmata.Relational.TD0
     , TD0
     , SGD 
     , Theorem 
     , Bins
     , BinsTheorem
  build-depends:
      liquid-base
    , liquid-containers
    , liquid-prelude
    , liquidhaskell
    , probability
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:  -fplugin=LiquidHaskell 

test-suite SGD-verified-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Spec.TD0
      Spec.SGD
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-tool-depends:
      tasty-discover:tasty-discover
  build-depends:
      liquid-base
    , SGD-verified
    , HUnit
    , tasty
    , tasty-hunit
  default-language: Haskell2010
