name:                safe-coupling
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

library
  exposed-modules:     
       Data.Dist
     , Data.List
     , Data.Derivative

     , Monad.PrM
     , Monad.PrM.Predicates
     , Monad.PrM.Laws

     , Monad.PrM.Relational.TCB.Spec
     , Monad.PrM.Relational.TCB.EDist
     , Monad.PrM.Relational.Theorems

     , Misc.ProofCombinators

-- Toy Examples
     , Examples.ExpDist

-- Bins Example
      , Bins.Bins
      , Bins.Theorem

-- Bins Example using Applicatives
      , ApplicativeBins.Bins
      , ApplicativeBins.Theorem

-- TD Case Study      
     , TD.TD0
     , TD.Lemmata.Relational.Update
     , TD.Lemmata.Relational.Sample
     , TD.Lemmata.Relational.Act
     , TD.Lemmata.Relational.Iterate
     , TD.Theorem

-- SGD Case Study      
     , SGD.SGD 
     , SGD.Theorem 

  build-depends:
      liquid-base
    , liquid-containers
    , liquid-prelude
    , liquidhaskell
    , probability
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:  -fplugin=LiquidHaskell 

test-suite safe-coupling-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Spec.TD0
      Spec.SGD
      Spec.Bins
      Spec.Utils
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-tool-depends:
      tasty-discover:tasty-discover
  build-depends:
      liquid-base
    , safe-coupling
    , HUnit
    , tasty
    , tasty-hunit
    , probability
    , sort
  default-language: Haskell2010
